# liqi_platform

./: .dockerignore  .formatter.exs  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  mix.exs  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  provider-integration.yml  v1-e5-artifact-release.yml  v1-e5-mix-deployment-authorize.yml  v1-live-readiness.yml  v1-source-readiness.yml
.liqi-control-inputs/: README.md  database-runtime-v1.json  migration-readiness-v1.json  runtime-config-v1.json
.liqi-control-ops/: install-preactivation-readiness-010fb80.sh  readiness-33e7a09.sh  readiness-33e7a09.sh.sha256
beam/: elf_abi.py
beam/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
beam/release/: mix-release-provider-v1.example.json
beam/scripts/: build_linux_release.py  health.sh  platform_probe.py  prepare_disposable_database.py  run-v1-integration.sh  run_bounded.py  run_v1_integration.py  validate-v1-source.sh  validate_linux_release_build_result.py  validate_release_manifest.py  verify-v1-release.sh
beam/test/: test_helper.exs
beam/tests/: test_elf_abi.py  test_linux_release_build_result.py  test_linux_release_builder.py  test_platform_probe.py  test_prepare_disposable_database.py  test_release_architecture.py  test_runtime_integration.py
containers/local/: Dockerfile.runtime  Dockerfile.sidecars  README.md  compose.yaml  validate_local_stack.py
contracts/database/: backup-metadata-v1.example.json  backup-metadata-v1.schema.json  backup-repository-capacity-v1.example.json  backup-repository-capacity-v1.schema.json  database-runtime-v1.example.json  database-runtime-v1.schema.json  idempotency-v1.example.json  idempotency-v1.schema.json  migration-readiness-v1.example.json  migration-readiness-v1.schema.json  outbox-v1.example.json  outbox-v1.schema.json  realtime-handoff-v1.example.json  realtime-handoff-v1.schema.json  recovery-status-v1.example.json  recovery-status-v1.schema.json  restore-beam-probe-v1.example.json  restore-beam-probe-v1.schema.json
contracts/deployment/: activation-v1.example.json  activation-v1.schema.json  installed-release-v1.example.json  installed-release-v1.schema.json  live-endpoint-v1.example.json  live-endpoint-v1.schema.json  mix-deployment-v1.example.json  mix-deployment-v1.schema.json  mix-release-v1.e5-temporary.example.json  mix-release-v1.example.json  mix-release-v1.schema.json  native-artifact-v1.example.json  native-artifact-v1.schema.json  native-artifact-v1.x86_64.example.json  native-authorization-result-v1.example.json  native-authorization-result-v1.schema.json  release-target-v1.example.json  release-target-v1.schema.json  rollback-v1.example.json  rollback-v1.schema.json  v0-rollback-compatibility-v1.example.json  v0-rollback-compatibility-v1.schema.json
contracts/errors/: error-codes-v0.json  error-codes-v1.json  error-model-v0.schema.json  error-model-v1.schema.json
contracts/events/: event-envelope-v0.schema.json  platform-probe-v0.md
contracts/infrastructure/: adoption-manifest-v1.example.json  adoption-manifest-v1.schema.json  adoption-result-v1.example.json  adoption-result-v1.schema.json  apply-result-v1.example.json  apply-result-v1.schema.json  database-credentials-v1.example.json  database-credentials-v1.schema.json  first-release-recovery-v1.example.json  first-release-recovery-v1.schema.json  host-bundle-v1.example.json  host-bundle-v1.schema.json  host-bundle-v1.x86_64.example.json  host-runtime-v1.example.json  host-runtime-v1.schema.json  oci-live-v1.e5-temporary.example.json  oci-live-v1.example.json  oci-live-v1.schema.json  plan-result-v1.example.json  plan-result-v1.schema.json  pre-apply-readiness-v1.example.json  pre-apply-readiness-v1.schema.json  secret-mapping-v1.example.json  secret-mapping-v1.schema.json  state-backend-evidence-v1.example.json  state-backend-evidence-v1.schema.json
contracts/jobs/: oban-policy-v1.example.json  oban-policy-v1.schema.json
contracts/native/: native-artifact-v1.schema.json  native-benchmark-v1.schema.json  native-capabilities-v1.schema.json  native-error-v1.schema.json  native-kernel-v1.schema.json  native-safety-result-v1.schema.json  rust-port-protocol-v1.schema.json  validate_contracts.py
contracts/openapi/: platform-v0.yaml  platform-v1.yaml
contracts/operations/: activation-result-v0.schema.json  alert-policy-v1.schema.json  capacity-budget-v0.schema.json  capacity-result-v0.schema.json  dependency-policy-v0.schema.json  deployment-spec-v0.schema.json  health-gate-target-v0.schema.json  integration-readiness-result-v0.schema.json  integration-result-v0.schema.json  owner-build-evidence-v0.schema.json  platform-probe-result-v0.schema.json  provider-capacity-registry-v0.schema.json  provider-compatibility-result-v0.schema.json  provider-gates-v0.schema.json  slo-v1.schema.json  (+10 more)
crates/application/: Cargo.toml
crates/application/src/: error.rs  health.rs  lib.rs  ports.rs  probe.rs  runtime.rs
crates/persistence-postgres/: Cargo.toml
crates/persistence-postgres/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  event.rs  health.rs  lib.rs  metadata.rs  probe.rs  realtime.rs  request.rs  request_context.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: health.rs  http.rs  lib.rs  shutdown.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  metrics.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: fake_platform.rs  lib.rs
crates/test-support/tests/: platform_probe.rs
database/: README.md  requirements-validation.txt
native/: README.md
native/fuzz/: .gitignore  Cargo.toml  run-fuzz.sh
native/fuzz/fuzz_targets/: sequence_diff_parity.rs
native/sequence-diff-nif/: Cargo.toml
native/sequence-diff-nif/src/: lib.rs
rel/: env.sh.eex  vm.args.eex
services/admin-cli/: Cargo.toml
services/admin-cli/src/: main.rs  platform_probe.rs
services/realtime/: Cargo.toml
services/realtime/src/: main.rs  session.rs
services/worker/: Cargo.toml
services/worker/src/: main.rs
tests/: __init__.py
(+681 files in other folders)
