[workspace]
resolver = "3"
members = [
  "crates/application",
  "crates/configuration",
  "crates/protocol",
  "crates/persistence-postgres",
  "crates/runtime",
  "crates/telemetry",
  "crates/test-support",
  "native/sequence-diff-core",
  "native/sequence-diff-nif",
  "services/admin-cli",
  "services/api",
  "services/realtime",
  "services/worker",
]
exclude = ["native/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "Proprietary"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "matched-path", "tokio", "tracing", "ws"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.31"
http = "1.3.1"
jsonschema = { version = "0.48.0", default-features = false }
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-http = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "reqwest-rustls", "trace"] }
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio", "trace"] }
oas3 = { version = "0.22.0", default-features = false, features = ["yaml-spec"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rustler = { version = "=0.38.0", default-features = false, features = ["nif_version_2_15"] }
secrecy = "0.10.3"
sqlx = { version = "0.9.0", default-features = false, features = ["json", "postgres", "runtime-tokio", "time", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower = { version = "0.5.2", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.7.0", features = ["catch-panic", "limit", "request-id", "sensitive-headers", "timeout", "trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "registry"] }
uuid = { version = "1.24.0", features = ["serde", "v4", "v5", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"

[profile.nif-release]
inherits = "release"
panic = "unwind"
strip = "symbols"
lto = "thin"
codegen-units = 1

[profile.release]
panic = "abort"
strip = "symbols"
lto = "thin"
codegen-units = 1
