[package]
name = "liqi-persistence-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
liqi-application = { version = "0.1.0", path = "../application" }
liqi-configuration = { version = "0.1.0", path = "../configuration" }
liqi-protocol = { version = "0.1.0", path = "../protocol" }
secrecy.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
