[package]
name = "liqi-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
http.workspace = true
liqi-application = { path = "../application" }
liqi-configuration = { path = "../configuration" }
liqi-protocol = { path = "../protocol" }
liqi-telemetry = { path = "../telemetry" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
