[package]
name = "liqi-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
http.workspace = true
liqi-application = { version = "0.1.0", path = "../application" }
liqi-configuration = { version = "0.1.0", path = "../configuration" }
liqi-protocol = { version = "0.1.0", path = "../protocol" }
liqi-telemetry = { version = "0.1.0", path = "../telemetry" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
