[package]
name = "liqi-platform-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
jsonschema.workspace = true
liqi-configuration = { path = "../../crates/configuration" }
liqi-protocol = { path = "../../crates/protocol" }
oas3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
