[package]
name = "liqi-platform-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
futures-util.workspace = true
clap.workspace = true
jsonschema.workspace = true
liqi-configuration = { version = "0.1.0", path = "../../crates/configuration" }
liqi-protocol = { version = "0.1.0", path = "../../crates/protocol" }
oas3.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
thiserror.workspace = true

[lints]
workspace = true
