[package]
name = "liqi-realtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
dev-fakes = ["dep:liqi-test-support"]

[dependencies]
axum.workspace = true
futures-util.workspace = true
liqi-application = { version = "0.1.0", path = "../../crates/application" }
liqi-configuration = { version = "0.1.0", path = "../../crates/configuration" }
liqi-protocol = { version = "0.1.0", path = "../../crates/protocol" }
liqi-persistence-postgres = { version = "0.1.0", path = "../../crates/persistence-postgres" }
liqi-runtime = { version = "0.1.0", path = "../../crates/runtime" }
liqi-telemetry = { version = "0.1.0", path = "../../crates/telemetry" }
liqi-test-support = { version = "0.1.0", path = "../../crates/test-support", features = ["dev-fakes"], optional = true }
serde_json.workspace = true
secrecy.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
