[package]
name = "liqi-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
dev-fakes = ["dep:liqi-test-support"]

[dependencies]
liqi-application = { path = "../../crates/application" }
liqi-configuration = { path = "../../crates/configuration" }
liqi-protocol = { path = "../../crates/protocol" }
liqi-persistence-postgres = { path = "../../crates/persistence-postgres" }
liqi-runtime = { path = "../../crates/runtime" }
liqi-telemetry = { path = "../../crates/telemetry" }
liqi-test-support = { path = "../../crates/test-support", features = ["dev-fakes"], optional = true }
secrecy.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true
